--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,6 +1,53 @@
-.product-container {}
+.product-container {
+    width: 300px;
+    height: 510px;
+    border: 1px solid #95A0A7;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
 
 .product-container img {
     height: 286px;
     width: 286px;
+    margin: 7px;
+    border-radius: 8px;
+}
+
+.product-details {
+    margin-left: 14px;
+}
+
+.product-details h4 {
+    margin-top: 12px;
+    margin-bottom: 11px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+}
+
+.product-details h5 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    margin-top: 0px;
+}
+
+.product-details p {
+    font-size: 12px;
+    margin-top: 0px;
+
+}
+
+.product-add-btn {
+    font-size: 15px;
+    width: 100%;
+    height: 48px;
+    cursor: pointer;
+    background: #FFE0B3;
+    border: 1px solid #95A0A7;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.product-add-btn:hover {
+    background: #ffd28d;
 }
