--- a/src/Components/OrderReview/OrderReview.css
+++ b/src/Components/OrderReview/OrderReview.css
@@ -10,10 +10,11 @@
 
 .review-item img {
     width: 91px;
+    border-radius: 6px;
 }
 
 .review-item-details p {
-    margin: 0px 10px;
+    margin: 0px 20px;
 }
 
 .product-name {
