--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -29,12 +29,9 @@
 .shop-btn {
     text-decoration: none;
     font-size: 25px;
-    background: #ffd28d;
+    background: #FF9900;
+    color: white;
     padding: 15px 35px;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.shop-btn:hover {
-    background-color: #fec876;
 }
